feat(converters): refactor UserConverter and update DAO classes for better encapsulation